# hollowknight-autosplit-wasm

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  layout-direct.lsl  layout-lswasr.lsl  layout.lsl  scene_table.txt  splits-direct.lss  splits-lswasr.lss
.cargo/: config.toml
.github/workflows/: build.yml
auto_splitter_logs/: auto_splitter_logs copy 2.txt  auto_splitter_logs copy 3.txt  auto_splitter_logs copy.txt  auto_splitter_logs.txt  log.txt
crates/ugly_widget/: Cargo.toml
crates/ugly_widget/src/: args.rs  lib.rs  radio_button.rs  store.rs  ugly_list.rs
crates/ugly_widget_derive/: Cargo.toml
crates/ugly_widget_derive/src/: lib.rs
examples/: splits.json  splits.rs
hksplitmaker/: nkg.lss  nkg.txt
splits/3vf/: 3vf-kings-station-lso.lss
splits/4ms/: 4ms-1221-lso.lss  4ms-1221-windows-control.lss  4ms-joke-lso.lss  4ms-joke-windows-control.lss  4ms-lso.lss  4ms-windows-control.lss  4ms-windows-ls.lsl  4ms-windows-ls.lss  layout-web.ls1l  save_aaaa.lss  splits-direct.lss
splits/4ms-hits/: 4ms-hits-lso.lss  4ms-hits-windows-ls.lsl  4ms-hits-windows-ls.lss  layout-lswasr.lsl
splits/a1uba/: a1uba-hits-lrt-lso.lss  a1uba-lso.lss  splits-direct.lss
splits/a1uba-hits/: a1uba-hits-lso.lss  splits-direct.lss
splits/al2ba/: al2ba-fireball-lantern-hksplitmaker.txt  al2ba-fireball-lantern.lss
splits/all-skills/: all_skills_wraiths_lantern.lss  all_skills_wraiths_lantern_ismas-lso.lss  all_skills_wraiths_lantern_ismas_hksplitmaker.txt
splits/all_skills_shuffle/: all_majors_rando-windows-ls.lss  all_skills_itemsync-lso.lss  all_skills_shuffle-lso.lss  all_skills_shuffle-windows-ls.lsl  all_skills_shuffle-windows-ls.lss  all_skills_shuffle.ls1l  all_skills_shuffle.lss  aste_shuffle-lso.lss  layout-web.ls1l
splits/all_stag_stations/: All-Stag-Stations-1432+-Shaman-Lantern.md  all_stag_stations-hksplitmaker.txt  all_stag_stations-ls.lss  all_stag_stations-lso.lss
splits/any-shade-soul/: any-shade-soul-lso.lss  any_steel_soul.lss  hksplitmaker.txt  splits-direct.lss
splits/any-shade-soul-hits/: layout-web.ls1l  splits-direct.lss
splits/cdash/: layout-lswasr.lsl  layout-web.ls1l  splits-control.lss  splits-direct.lss  splits-lswasr.lss
splits/colo3/: trial_of_the_fool-lso.lss
splits/comparison/: cdash-linux-wsl-lso.lss  cdash-windows-control.lss  cdash-windows-ls.lsl  cdash-windows-ls.lss  comparison-linux-wsl-lso.ls1l  comparison-mac-m1-lso.ls1l  comparison-windows-control.lsl  comparison-windows-lso.ls1l  comparison-windows-obs-lso.ls1l  quit-linux-wsl-lso.lss  quit-mac-m1-lso.lss  quit-windows-control.lss  quit-windows-ls.lsl  quit-windows-ls.lss  quit-windows-lso.lss  stag-linux-wsl-lso.lss  stag-windows-control.lss  stag-windows-ls.lsl  stag-windows-ls.lss  walk-windows-control.lss  walk-windows-ls.lsl  walk-windows-ls.lss  walk-windows-lso.lss
splits/current/: ColumnWidths-splits.lsl  ColumnWidths-subsplits.lsl  layout-direct.lsl  layout-lso.ls1l  layout-lswasr.lsl  layout-web.ls1l  layout-windows-control.lsl  layout-windows-ls.lsl  norman.lss  splits-control.lss  splits-direct.lss  splits-lso.lss  splits-windows-ls.lss  straight-line-test.txt
splits/duelist/: duelist-kings-hksplitmaker.txt  duelist-kings-lso.lss  duelist-late-lemm-hksplitmaker.txt  duelist-late-lemm-lso.lss
splits/grubsong/: grubsong-lso.lss  grubsong-windows-control.lss
splits/hits/: hits-lrt-lso.ls1l  hits-lrt-lso.lss  hits-lso.ls1l  hits-lso.lss  hits-windows-control.lsl  hits-windows-ls.lsl  hits-windows-ls.lss  layout-lswasr.lsl  layout-web.ls1l  splits-lswasr.lss
splits/kill-myla/: kill-myla-hksplitmaker.txt  kill-myla-lso.lss
splits/kings_pass/: kings_pass.lss
splits/mantis-lords/: mantis-lords-hksplitmaker.txt  mantis_lords-hits-lrt-lso.lss
splits/max-no-cheevos/: max-no-cheevos-hksplitmaker.txt  max-no-cheevos.lss
splits/nkg-hits/: NKG Route Notes.txt  nkg-lso.lss
splits/p1/: pantheon_of_the_master-lso.lss  pantheon_of_the_master-windows-ls.lsl  pantheon_of_the_master-windows-ls.lss
splits/p2/: pantheon_of_the_artist-lso.lss  pantheon_of_the_artist-windows-control.lss  pantheon_of_the_artist-windows-ls.lsl  pantheon_of_the_artist-windows-ls.lss
splits/p3/: pantheon_of_the_sage-lso.lss  pantheon_of_the_sage-windows-ls.lsl  pantheon_of_the_sage-windows-ls.lss
splits/p4/: pantheon_of_the_knight-lso.lss  pantheon_of_the_knight-windows-ls.lsl  pantheon_of_the_knight-windows-ls.lss
splits/p5/: pantheon_of_hallownest-lso.lss  pantheon_of_hallownest-windows-ls.lsl  pantheon_of_hallownest-windows-ls.lss
splits/quit/: layout-control.lsl  layout-direct.lsl  layout-lswasr.lsl  layout-web.ls1l  splits-control.lss  splits-direct.lss  splits-lswasr.lss
splits/stag/: layout-control.lsl  layout-lswasr.lsl  splits-control.lss  splits-direct.lss  splits-lswasr.lss
splits/test/: all_achievements.lss  any.lss  any_claw_il.lss  enter_kp_control.lss  enter_kp_startnewgame.lss  room_timer-control.lss  room_timer-lso.lss  room_timer_1.lss  room_timer_2.lss  room_timer_3.lss
splits/walk/: layout-lswasr.lsl  layout-web.ls1l  splits-control.lss  splits-direct.lss  splits-lswasr.lss
src/: AutoSplitterSettings.txt  asr_xml.rs  auto_splitter_settings.rs  combo_box.rs  file.rs  game_time.rs  hit_counter.rs  hollow_knight_memory.rs  legacy_xml.rs  lib.rs  load_remover.rs  radio_button.rs  scene_table.json  settings_gui.rs  splits.json  splits.rs  timer.rs  ugly_list.rs  unstable.rs  weak.rs
src/ugly_widget/: args.rs  combo_box.rs  mod.rs  radio_button.rs  ugly_list.rs
