[package]
name = "wasm-hollowknight-autosplit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = [
    # "alloc", # Working with allocations.
    # "derive", # Defining your own settings structs and converting endianness.
    # "flags", # Working with bit flags.
    # "float-vars", # Setting floating point variables.
    # "float-vars-small", # Setting floating point variables (small binary size).
    # "integer-vars", # Setting integer variables.
    # "signature", # Scanning signatures.
    # "gba", # Accessing Game Boy Advance emulators.
    # "genesis", # Accessing Genesis emulators.
    # "ps1", # Accessing PlayStation emulators.
] }

# Bytemuck can be used to define structs that are being read from the game's process.
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
