[package]
name = "hollowknight-autosplit-wasm"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/AlexKnauth/asr", branch = "mono-4", features = [
    "alloc", # Working with allocations.
    "derive", # Defining your own settings structs, converting endianness, and binding to .NET classes.
    # "flags", # Working with bit flags.
    # "float-vars", # Setting floating point variables.
    # "float-vars-small", # Setting floating point variables (small binary size).
    "integer-vars", # Setting integer variables.
    # "signature", # Scanning signatures.
    # "wasi-no-std", # Support for no_std on WASI.
    "unity", # Accessing games using the Unity engine.
    # "gba", # Accessing Game Boy Advance emulators.
    # "genesis", # Accessing Genesis emulators.
    # "ps1", # Accessing PlayStation emulators.
] }

ugly_widget = { path = "crates/ugly_widget", version = "0.1.0" }
ugly_widget_derive = { path = "crates/ugly_widget_derive", version = "0.1.0" }

# Bytemuck can be used to define structs that are being read from the game's process.
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }

serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }

xmltree = { version = "0.10.3" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
# strip = true
# debug = true

[profile.release.build-override]
opt-level = 0
