[package]
name = "ugly_widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/AlexKnauth/asr", branch = "cattrs-mono-3-linux", features = [
    "alloc", # Working with allocations.
    "std",
    "derive", # Defining your own settings structs, converting endianness, and binding to .NET classes.
    # "flags", # Working with bit flags.
    # "float-vars", # Setting floating point variables.
    # "float-vars-small", # Setting floating point variables (small binary size).
    "integer-vars", # Setting integer variables.
    # "signature", # Scanning signatures.
    # "wasi-no-std", # Support for no_std on WASI.
    "unity", # Accessing games using the Unity engine.
    # "gba", # Accessing Game Boy Advance emulators.
    # "genesis", # Accessing Genesis emulators.
    # "ps1", # Accessing PlayStation emulators.
] }
ugly_widget_derive = { path = "../ugly_widget_derive" }
